tests/transpiler/x/hs/values_builtin.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
import Prelude hiding (a, b, c)
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:07 GMT+7
import Data.List (intercalate, isInfixOf, union, intersect, nub, sortOn, (\\))
import qualified Data.Map as Map
data GenType1 = GenType1
  { a :: Int,
    b :: Int,
    c :: Int
  } deriving (Show)


m = GenType1 {a = 1, b = 2, c = 3}

main :: IO ()
main = do
    putStrLn (intercalate " " (map show (Map.elems m)))
